--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-icons": "^5.3.0",
     "react-parallax-tilt": "^1.7.238",
     "react-router-dom": "^6.26.2",
-    "react-tsparticles": "^1.43.1"
+    "react-tsparticles": "^1.43.1",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
