--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview --port 8080"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "pdfjs-dist": "^4.6.82",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-parallax-tilt": "^1.7.238",
+    "react-pdf": "^5.7.2",
     "react-router-dom": "^6.26.2",
     "react-tsparticles": "^1.43.1",
     "typewriter-effect": "^2.21.0"
