--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pdfjs-dist": "^4.6.82",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-github-calendar": "^4.3.0",
     "react-icons": "^5.3.0",
     "react-parallax-tilt": "^1.7.238",
     "react-pdf": "^5.7.2",
